v.1.1.4 1.Графики добавлены и фрагмент с настройками тоже.

--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -8,6 +8,6 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_chart_setting">Chart\'s settings</string>
     <string name="menu_chart">Charts</string>
 </resources>
