--- a/AndroidApp/app/src/main/res/values/strings.xml
+++ b/AndroidApp/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_chart_setting">Chart\'s settings</string>
     <string name="menu_chart">Charts</string>
+    <string name="more_details">More details</string>
 </resources>
